<package>
  <name>map_store</name>
  <version>0.3.1</version>
  <description>
    Storage manager for OccupancyGrid maps.  Supports naming the most
    recent map, getting a list of map names, and publishing a
    specific map.
  </description>
  <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/map_store</url>
  <author>Dave Hershberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>warehouse_ros</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>warehouse_ros</run_depend>
</package>

